# dovecot-message-hashing

./: README.md  configure.ac
.github/actions/dovecot-message-hashing-test/: Dockerfile  action.yml  dovecot.conf  entrypoint.sh  test.eml
.github/workflows/: main.yml
src/: Makefile.am  message-hashing-plugin.c  message-hashing-plugin.h
