AM_CPPFLAGS = \
	$(LIBDOVECOT_INCLUDE) \
	$(LIBDOVECOT_STORAGE_INCLUDE) \
	$(LIBDOVECOT_NOTIFY_INCLUDE)

lib90_message_hashing_plugin_la_LDFLAGS = -module -avoid-version

module_LTLIBRARIES = \
	lib90_message_hashing_plugin.la

lib90_message_hashing_plugin_la_SOURCES = \
	message-hashing-plugin.c

noinst_HEADERS = \
	message-hashing-plugin.h
